# Todo-app

./: CMakeLists.txt  Calculations.h  Constants.h  Date.cpp  Date.h  DateCreation.cpp  DateCreation.h  ErrorHandling.cpp  ErrorHandling.h  FileIO.cpp  FileIO.h  Interface.cpp  Interface.h  InterfaceComposition.cpp  InterfaceComposition.h  ProgramLogic.cpp  ProgramLogic.h  README.md  TaskManager.cpp  TaskManager.h  Things to do  first.txt  task  task.cpp  tasks.txt
FTXUI/src/ftxui/component/: dropdown.cpp
include/: Calculations.h  Constants.h  ErrorHandling.h  FileIO.h  Interface.h  ProgramLogic.h  TaskManager.h
src/: Date.cpp  DateCreation.cpp  ErrorHandling.cpp  FileIO.cpp  Interface.cpp  ProgramLogic.cpp  TaskManager.cpp  task.cpp
